[tool.poetry]
name = "weather-forecast"
version = "0.1.0"
description = "Simple web app to show weather to next 5 days"
authors = ["Tomasz Sas <tomaszsas.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
